# django-template-docker

./: .dockerignore  .gitignore  .gitigonore  Dockerfile  Makefile  README.md  compose.yml  mkdocs.yml  pyproject.toml
app/: db.sqlite3
app/config/: asgi.py  wsgi.py
app/config/settings/: base.py
app/core/: settings.py
app/core/settings/: dev.py
backend/apps/common/: apps.py
backend/core/settings/: base.py  dev.py  prod.py
docs/: index.md
dotenv_files/: .env  .env-example
scripts/: commands.sh
