[tool.poetry]
package-mode = false
name = "django-docker"
version = "0.1.0"
description = ""
authors = ["mateus-dev-me <mateusmartinsipu2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
django = "4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.4"
django-extensions = "^3.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-django = "^4.9.0"
faker = "^33.3.1"
factory-boy = "^3.3.1"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
pythonpath = "."
python_files = ["test_*.py", "*_test.py"]
addopts = ["-p no:warning", "--cov=."]


[tool.coverage.run]
omit = [
    "__init__.py",
    "manage.py",
    "urls.py",
    "apps.py",
    "**/config/*",
    "**/migrations/*",
    "conftest.py",
    "**/tests/*",
]


[tool.ruff]
extend-exclude = [
  ".venv",
  "data",
  "migrations",
  "config",
  "manage.py",
  ".ruff_cache",
  "tests",
]
line-length = 79
indent-width = 4


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
