[project]
name = "django-template-docker"
version = "0.1.0"
description = ""
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2",
    "django-filter>=25.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "colorlog>=6.9.0",
    "django-extensions>=4.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
    "taskipy>=1.14.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
]
test = [
    "factory-boy>=3.3.3",
    "faker>=37.3.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.dev"
pythonpath = "."
python_files = ["test_*.py", "*_test.py"]
addopts = ["-p no:warning", "--cov=."]

[tool.coverage.run]
omit = [
    "__init__.py",
    "manage.py",
    "urls.py",
    "apps.py",
    "**/config/*",
    "**/migrations/*",
    "conftest.py",
    "**/tests/*",
]

[tool.ruff]
extend-exclude = [
  ".venv",
  "data",
  "migrations",
  "settings",
  "manage.py",
  ".ruff_cache",
  "tests",
]
line-length = 79
indent-width = 4

[tool.ruff.lint]
ignore = ["E501", "PLR0913", "PLR6301", "PLR0917", "PLR2004"]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = "ruff check"
pre_fmt = "ruff check --diff"
fmt = "ruff format"
clean = "python backend/manage.py clean_pyc"
shell = "python backend/manage.py shell_plus"
db = "python backend/manage.py dbshell"
run = "python backend/manage.py runserver"
docker = "docker compose -f compose.yml up"
pre_migrations = "python backend/manage.py makemigrations"
migrations = "python backend/manage.py migrate"
pre_test = "task lint"
test = "pytest -s -x -vvv --cov=backend --tb=short --maxfail=1"
